--- a/detail/ID_constStrToNonConstPtr.html
+++ b/detail/ID_constStrToNonConstPtr.html
@@ -60,6 +60,7 @@ ISO/IEC 14882:2017 5.13.5(16)-undefined</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">MISRA C 2012 7.4</div>
+<div class="ref-items">MISRA C 2012 7.4
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/STR30-C.+Do+not+attempt+to+modify+string+literals" target="_blank" class="related-link">SEI CERT STR30-C</a></div>
 </article>
 </html>
