--- a/detail/ID_for_floatCounter.html
+++ b/detail/ID_for_floatCounter.html
@@ -52,6 +52,7 @@ cout &lt;&lt; n &lt;&lt; &#x27;\n&#x27;;  //<i> Not 1000</i></code>
 <hr class="dashed-hr"/>
 <div class="ref-items">MISRA C 2004 13.4
 MISRA C 2012 14.1
-MISRA C++ 2008 6-5-1</div>
+MISRA C++ 2008 6-5-1
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/FLP30-C.+Do+not+use+floating-point+variables+as+loop+counters" target="_blank" class="related-link">SEI CERT FLP30-C</a></div>
 </article>
 </html>
