--- a/detail/ID_illBoolOperation.html
+++ b/detail/ID_illBoolOperation.html
@@ -55,6 +55,7 @@ ISO/IEC 14882:2011 D.1-deprecated</div>
 <a href="https://cwe.mitre.org/data/definitions/1025.html" target="_blank" class="related-link">CWE-1025</a>
 MISRA C 2004 12.7
 MISRA C 2012 10.1
-MISRA C++ 2008 5-0-21</div>
+MISRA C++ 2008 5-0-21
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/EXP46-C.+Do+not+use+a+bitwise+operator+with+a+Boolean-like+operand" target="_blank" class="related-link">SEI CERT EXP46-C</a></div>
 </article>
 </html>
