--- a/detail/ID_improperNullTermination.html
+++ b/detail/ID_improperNullTermination.html
@@ -58,6 +58,7 @@ ISO/IEC 9899:2011 7.24.2.4</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/170.html" target="_blank" class="related-link">CWE-170</a></div>
+<div class="ref-items"><a href="https://cwe.mitre.org/data/definitions/170.html" target="_blank" class="related-link">CWE-170</a>
+<a href="https://wiki.sei.cmu.edu/confluence/display/c/STR32-C.+Do+not+pass+a+non-null-terminated+character+sequence+to+a+library+function+that+expects+a+string" target="_blank" class="related-link">SEI CERT STR32-C</a></div>
 </article>
 </html>
