--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
   <li><a href="./detail/ID_missingArrayIndexing.html">指针运算应使用数组下标的方式</a></li>
 </ol></li>
 <li id="interruption" class="rules-toc-chapter">Interruption<ol>
-  <li><a href="./detail/ID_sig_dataRaces.html">避免由信号处理产生的数据竞争</a></li>
+  <li><a href="./detail/ID_sig_dataRaces.html">避免异步信号处理产生的数据竞争</a></li>
   <li><a href="./detail/ID_sig_nonAsyncSafeCall.html">处理信号时避免使用非异步信号安全函数</a></li>
   <li><a href="./detail/ID_sig_illReturn.html">SIGFPE、SIGILL、SIGSEGV 等信号的处理函数不可返回</a></li>
   <li><a href="./detail/ID_forbidSignalFunction.html">禁用 signal 函数</a></li>
