--- a/detail/ID_ownerlessResource.html
+++ b/detail/ID_ownerlessResource.html
@@ -7,11 +7,11 @@
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
-  <title>资源应接受对象化管理 - C/C++ 安全规则</title>
+  <title>使资源接受对象化管理 - C/C++ 安全规则</title>
 </head>
 <article>
 <header>
-  <h1>资源应接受对象化管理</h1>
+  <h1>使资源接受对象化管理</h1>
   <div id="subtitle">
     <div id="subtitle-id">2.4 ID_ownerlessResource</div>
     <div id="subtitle-tags">
