--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <li><a href="./detail/ID_resourceLeak.html">不可失去对已分配资源的控制</a></li>
   <li><a href="./detail/ID_memoryLeak.html">不可失去对已分配内存的控制</a></li>
   <li><a href="./detail/ID_illAccess.html">不可访问未初始化或已释放的资源</a></li>
-  <li><a href="./detail/ID_ownerlessResource.html">资源应接受对象化管理</a></li>
+  <li><a href="./detail/ID_ownerlessResource.html">使资源接受对象化管理</a></li>
   <li><a href="./detail/ID_incompleteNewDeletePair.html">资源的分配与回收方法应成对提供</a></li>
   <li><a href="./detail/ID_incompatibleDealloc.html">资源的分配与回收方法应配套使用</a></li>
   <li><a href="./detail/ID_crossModuleTransfer.html">不应在模块之间传递容器类对象</a></li>
