--- a/detail/ID_missingArrayIndexing.html
+++ b/detail/ID_missingArrayIndexing.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：指针运算可由多种方式完成，为了提高可读性应统一使用数组下标的方式，不宜使用 +、-、+=、-= 等运算符，且应尽量减少指针运算。" />
+  <meta name="description" content="C/C++ 安全编程要点：指针与整数的加减运算可通过多种方式完成，为了提高可读性应统一使用数组下标的方式，不宜使用 +、-、+=、-= 等运算符，且应尽量减少指针运算。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
-  <title>指针运算应使用数组下标的方式 - C/C++ 安全规则</title>
+  <title>指针与整数的加减运算应使用数组下标的方式 - C/C++ 安全规则</title>
 </head>
 <article>
 <header>
-  <h1>指针运算应使用数组下标的方式</h1>
+  <h1>指针与整数的加减运算应使用数组下标的方式</h1>
   <div id="subtitle">
     <div id="subtitle-id">14.24 ID_missingArrayIndexing</div>
     <div id="subtitle-tags">
@@ -21,7 +21,7 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>指针运算可由多种方式完成，为了提高可读性应统一使用数组下标的方式，不宜使用 +、-、+=、-= 等运算符，且应尽量减少指针运算。</p>
+<p>指针与整数的加减运算可通过多种方式完成，为了提高可读性应统一使用数组下标的方式，不宜使用 +、-、+=、-= 等运算符，且应尽量减少指针运算。</p>
 
 <p>指针的 ++、-- 运算和两个指针的减法运算可不受本规则限制。</p>
 
