--- a/detail/ID_illPtrArithmetic.html
+++ b/detail/ID_illPtrArithmetic.html
@@ -33,15 +33,15 @@ p++;       //<i> Non-compliant</i>
 p--;       //<i> Non-compliant</i>
 
 p = &amp;i;
-p += 1;    //<i> Non-compliant</i>
-p += 2;    //<i> Non-compliant, undefined behavior if overflow</i>
-p -= 1;    //<i> Non-compliant, undefined behavior if overflow</i></code>
-<p>虽然指向单个对象的指针也相当于指向只有一个元素的数组，但对其值进行增减的实际应用价值不高，而且易导致错误，如增值超过 1，或与非 0 值相减都可能造成指针的值溢出，从而导致未定义的行为。</p>
+p -= 1;      //<i> Non-compliant, may overflow</i>
+p += 1;      //<i> Non-compliant</i>
+p = &amp;p[2];   //<i> Non-compliant, may overflow</i></code>
+<p>虽然指向单个对象的指针也相当于指向了只有一个元素的数组，但对其值进行增减的实用价值有限，且易导致错误，如增值超过 1，或与非 0 值相减都可能造成指针值溢出，从而导致未定义的行为。</p>
 
 <p>对指向单个对象的指针也不应使用数组下标 [0]，如：</p>
 <code>p = &amp;i;
 p[0] = 1;   //<i> Non-compliant</i></code>
-<p>例中 p 指向变量 i，但 p[0] 会使人误以为 p 指向数组元素。</p>
+<p>例中 p 指向变量 i，但 p[0] 这种方式会使人误以为 p 指向数组元素。</p>
 
 <p>又如：</p>
 <code>struct {
