--- a/detail/ID_macro_paramNotEnclosed.html
+++ b/detail/ID_macro_paramNotEnclosed.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：预处理器对宏参数只做文本替换，不考虑运算符优先级等问题，所以应将宏参数用括号括起来，从而避免意料之外的错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：编译器对宏参数只做文本替换，不考虑运算符优先级等问题，所以应将宏参数用括号括起来，从而避免意料之外的错误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
