--- a/detail/ID_missingBracedSyntax.html
+++ b/detail/ID_missingBracedSyntax.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：由 C++11 提出的 {} 初始化法有效规避了用 = 或 () 进行初始化的不确定性。" />
+  <meta name="description" content="C/C++ 安全编程要点：用 = 或 () 初始化不检查类型转换是否安全，可能会造成数据丢失，用 {} 初始化会进行相关检查，避免数据丢失。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
