--- a/detail/ID_nonPrivateData.html
+++ b/detail/ID_nonPrivateData.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：类的数据成员均应设为 private，对外统一由成员函数提供访问方法，且应避免返回 private 成员的非常量引用或指针。" />
+  <meta name="description" content="C/C++ 安全编程要点：类的数据成员均应设为 private，统一由成员函数提供访问方法，并避免返回数据成员的非常量引用或指针。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
