--- a/detail/ID_plainSensitiveInfo.html
+++ b/detail/ID_plainSensitiveInfo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：代码中的敏感数据极易泄露，产品以及相关运维、测试工具的代码均不可记录任何敏感数据。" />
+  <meta name="description" content="C/C++ 安全编程要点：代码中的敏感数据极易泄露，产品及相关运维、测试工具的代码均不可记录任何敏感数据。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
