--- a/detail/ID_switch_emptyBlock.html
+++ b/detail/ID_switch_emptyBlock.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：空的 switch 语句没有意义。" />
+  <meta name="description" content="C/C++ 安全编程要点：空的 switch 语句无实际意义，往往是残留代码或功能未实现。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
