--- a/detail/ID_uselessQualifier.html
+++ b/detail/ID_uselessQualifier.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：将 enum 或 enum class 的底层类型（underlying type）设为 const 或 volatile 是没有意义的，会被编译器忽略，属于语言运用错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：在 C++ 语言中，将 enum 或 enum class 的底层类型（underlying type）设为 const 或 volatile 是没有意义的，会被编译器忽略。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
-  <title>枚举类型的底层类型不应为 const 或 volatile - C/C++ 安全规则</title>
+  <title>声明枚举类型的底层类型时不应使用 const 或 volatile - C/C++ 安全规则</title>
 </head>
 <article>
 <header>
-  <h1>枚举类型的底层类型不应为 const 或 volatile</h1>
+  <h1>声明枚举类型的底层类型时不应使用 const 或 volatile</h1>
   <div id="subtitle">
     <div id="subtitle-id">6.2.7 ID_uselessQualifier</div>
     <div id="subtitle-tags">
@@ -21,7 +21,9 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>将 enum 或 enum class 的底层类型（underlying type）设为 const 或 volatile 是没有意义的，会被编译器忽略，属于语言运用错误。</p>
+<p>在 C++ 语言中，将 enum 或 enum class 的底层类型（underlying type）设为 const 或 volatile 是没有意义的，会被编译器忽略。</p>
+
+<p>枚举类型基于整数类型实现，故称枚举类型的底层类型为整数类型。enum 的底层类型在 C 和 C++ 语言中由实现定义，C++11  引入 enum class，并与 enum 一起均可显式声明底层类型，若未显式声明，enum class 的底层类型为 int，enum 的底层类型仍由实现定义。</p>
 
 <p>示例：</p>
 <code>enum E: const unsigned int  //<i> Non-compliant, ‘const’ is invalid</i>
@@ -30,7 +32,7 @@
 };
 E e = e0;  //<i> ‘e’ is not const</i>
 </code>
-<p>应改为：</p>
+<p>将 E 的底层类型声明为 const 是没有意义的，e 为变量，应改为：</p>
 <code>enum E: unsigned int  //<i> Compliant</i>
 {
     e0, e1, e2
