--- a/detail/ID_voidCast.html
+++ b/detail/ID_voidCast.html
@@ -23,7 +23,7 @@
 <main>
 <p>与 void* 相互转换会打破类型限制，是不安全的类型转换。</p>
 
-<p>C 语言的某些传统接口会使用 void*，可不受本规则限制，但在 C++ 代码中应避与 void* 相互转换。</p>
+<p>C 语言的某些标准接口会使用 void*，可不受本规则限制，但在 C++ 代码中应避与 void* 相互转换。</p>
 
 <p>示例：</p>
 <code>struct A { .... };
