--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
   <li><a href="./detail/ID_badQualifierPosition.html">const、volatile 限定类型时的位置应统一</a></li>
   <li><a href="./detail/ID_sandwichedModifier.html">const、volatile 等关键字不应出现在基本类型名称的中间</a></li>
   <li><a href="./detail/ID_constStrToNonConstPtr.html">指向常量字符串的指针应使用 const 声明</a></li>
-  <li><a href="./detail/ID_uselessQualifier.html">枚举类型的底层类型不应为 const 或 volatile</a></li>
+  <li><a href="./detail/ID_uselessQualifier.html">声明枚举类型的底层类型时不应使用 const 或 volatile</a></li>
   <li><a href="./detail/ID_constLiteralReference.html">对常量的定义不应为引用</a></li>
   <li><a href="./detail/ID_forbidRestrictPtr.html">禁用 restrict 指针</a></li>
   <li><a href="./detail/ID_forbidVolatile.html">非适当场景禁用 volatile</a></li>
