--- a/detail/ID_forbidPragmaDirective.html
+++ b/detail/ID_forbidPragmaDirective.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：为了提高可移植性，应避免使用由实现定义的 pragma 指令。" />
+  <meta name="description" content="C/C++ 安全编程要点：应避免使用由实现定义的 pragma 指令以提高可移植性。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
