--- a/detail/ID_forbidUnscopedEnum.html
+++ b/detail/ID_forbidUnscopedEnum.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：传统 C 枚举没有有效的类型和作用域控制，极易造成类型混淆和名称冲突，在 C++ 语言中建议改用 enum class。" />
+  <meta name="description" content="C/C++ 安全编程要点：enum 受到的限制较为宽松，易造成混淆或冲突等问题，在 C++ 代码中应改用 enum class。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,7 +21,7 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>传统 C 枚举没有有效的类型和作用域控制，极易造成类型混淆和名称冲突，在 C++ 代码中建议改用 enum class。</p>
+<p>enum 受到的限制较为宽松，易造成混淆或冲突等问题，在 C++ 代码中应改用 enum class。</p>
 
 <p>示例：</p>
 <code>enum E {      //<i> Non-compliant</i>
@@ -32,28 +32,25 @@
 
 E foo();
 
-void bar() {
-    if (foo()) {   //<i> ‘e1’ or ‘e2’??</i>
-        ....
-    }
+if (foo()) {   //<i> ‘e1’ or ‘e2’??</i>
+    ....
 }</code>
-<p>传统 C 枚举值与 int 等类型可以随意转换，如果 e0 和 e2 表示某种错误情况，e1 表示正确情况，那么 bar 函数中对 foo 返回值的判断就是错误的，这也是一种常见问题，C++11 提出了 enum class 的概念加强了类型检查，提倡在新项目中尽量使用 enum class。</p>
+<p>C 枚举值往往可以与整数类型随意转换，如果 e0 和 e2 表示某种错误情况，e1 表示正确情况，那么例中对 foo 函数返回值的判断就是错误的，这也是一种常见问题。</p>
 
-<p>应改为：</p>
+<p>C++11 提出的 enum class 会受到更严格的类型和作用域限制，在 C++ 代码中应尽量使用 enum class：</p>
 <code>enum class E {   //<i> Compliant</i>
     e0 = 0,
     e1 = 1,
     e2 = -1
 };
 
-void bar() {
-    if (foo() == E::e1) {   //<i> OK</i>
-        ....
-    }
-    if (foo()) {   //<i> Compile error, cannot cast the enum class casually</i>
-        ....
-    }
+if (foo() == E::e1) {   //<i> OK</i>
+    ....
+}
+if (foo()) {   //<i> Compile error, cannot cast the enum class casually</i>
+    ....
 }</code>
+<p>enum class 类型不能隐式转为整数类型，使用相关枚举项时也需要声明其所属枚举类型的名称，以避免名称冲突。</p>
 
 </main>
 
