--- a/detail/ID_paramModified.html
+++ b/detail/ID_paramModified.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：为了提高可读性和可维护性，应分清形式参数和普通局部变量的职责，避免修改形式参数。" />
+  <meta name="description" content="C/C++ 安全编程要点：为了提高可读性和可维护性，应分清形式参数和普通局部对象的职责，避免修改形式参数。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
