--- a/detail/ID_forbidUnscopedEnum.html
+++ b/detail/ID_forbidUnscopedEnum.html
@@ -35,7 +35,7 @@ E foo();
 if (foo()) {   //<i> ‘e1’ or ‘e2’??</i>
     ....
 }</code>
-<p>C 枚举值往往可以与整数类型随意转换，如果 e0 和 e2 表示某种错误情况，e1 表示正确情况，那么例中对 foo 函数返回值的判断就是错误的，这也是一种常见问题。</p>
+<p>enum 往往可以与整数类型随意转换，如果 e0 和 e2 表示某种错误情况，e1 表示正确情况，那么例中对 foo 函数返回值的判断就是错误的，这也是一种常见问题。</p>
 
 <p>C++11 提出的 enum class 会受到更严格的类型和作用域限制，在 C++ 代码中应尽量使用 enum class：</p>
 <code>enum class E {   //<i> Compliant</i>
@@ -50,7 +50,7 @@ if (foo() == E::e1) {   //<i> OK</i>
 if (foo()) {   //<i> Compile error, cannot cast the enum class casually</i>
     ....
 }</code>
-<p>enum class 类型不能隐式转为整数类型，使用相关枚举项时也需要声明其所属枚举类型的名称，以避免名称冲突。</p>
+<p>enum class 不能隐式转为整数类型，使用相关枚举项时也需要声明其所属枚举类型的名称，以避免名称冲突。</p>
 
 </main>
 
