--- a/detail/ID_illFloatComparison.html
+++ b/detail/ID_illFloatComparison.html
@@ -21,7 +21,7 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>一般来说，除了可以记作 a * 2&lt;sup&gt;n&lt;/sup&gt;（a、n 为整数）的浮点数值可以被精确存储之外，其他均为近似值。用 == 或 != 判断浮点数（float、double、long double）是否相等往往得不到预期的结果。</p>
+<p>一般来说，除了可以记作 a * 2<sup>n</sup>（a、n 为整数）的浮点数值可以被精确存储之外，其他均为近似值。用 == 或 != 判断浮点数（float、double、long double）是否相等往往得不到预期的结果。</p>
 
 <p>如 0、1、2、3、1.5、1.25、… 可以被精确存储，而除此之外绝大部分数值如 0.1、0.2、0.3、… 只能存储其近似值。</p>
 
