--- a/detail/ID_literal_casualSeparators.html
+++ b/detail/ID_literal_casualSeparators.html
@@ -34,7 +34,7 @@
 <p>浮点常量与 10 进制常量要求相同，小数部分从高位至低位分隔。</p>
 
 <p>示例：</p>
-<code>auto i = 123&#x27;456&#x27;78&#x27;9;   // Non-compliant
+<code>auto i = 123&#x27;456&#x27;78&#x27;9;   //<i> Non-compliant</i>
 </code>
 <p>应保持相同的间距：</p>
 <code>auto i = 123&#x27;456&#x27;789;    //<i> Compliant</i></code>
