--- a/detail/UB/cpp-ub-1.html
+++ b/detail/UB/cpp-ub-1.html
@@ -25,7 +25,7 @@
 
 <p>示例：</p>
 <code>auto s = &quot;\u54\
-0D&quot;;               // Undefined behavior
+0D&quot;;               //<i> Undefined behavior</i>
 
 auto \u54\
 0D = &#x27;a&#x27;;          //<i> Undefined behavior</i></code>
