--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 <article class="footer-holder">
   <nav>
+    <span class="nav-icon">☰</span>
     <ul class="nav-list">
-      <li><span class="nav-icon">☰</span></li>
       <li><a href="./detail/introduction.html">项目介绍</a></li>
       <li><a href="#rules-toc-title">规则目录</a></li>
       <li><a href="#appendix-title">附录</a></li>
