--- a/detail/c-ub-list.html
+++ b/detail/c-ub-list.html
@@ -28,7 +28,7 @@
     <div id="header-wrapper">
       <div id="titles">
         <h1 id="ub-list-main-title">C 未定义行为成因列表 <img id="version-tag" alt="version-1.3.2" src="https://img.shields.io/badge/version-1.3.2-brightgreen"></h1>
-        <blockquote>blog.llvm.org: "<i>Many seemingly reasonable things in C actually have undefined behavior, and this is a common source of bugs in programs.</i>" </blockquote>
+        <blockquote>blog.llvm.org: "Many seemingly reasonable things in C actually have undefined behavior, and this is a common source of bugs in programs." </blockquote>
       </div>
       <div>
         <img alt="logo" id="main-logo" src="../img/main_logo.png"/>     
