--- a/detail/cpp-ub-list.html
+++ b/detail/cpp-ub-list.html
@@ -28,7 +28,7 @@
     <div id="header-wrapper">
       <div id="titles">
         <h1 id="ub-list-main-title">C++ 未定义行为成因列表 <img id="version-tag" alt="version-1.3.2" src="https://img.shields.io/badge/version-1.3.2-brightgreen"></h1>
-        <blockquote>cppreference.com: "<i>Undefined behavior renders the entire program meaningless if certain rules of the language are violated.</i>" </blockquote>
+        <blockquote>cppreference.com: "Undefined behavior renders the entire program meaningless if certain rules of the language are violated." </blockquote>
       </div>
       <div>
         <img alt="logo" id="main-logo" src="../img/main_logo.png"/>     
