--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="header-wrapper">
       <div id="titles">
         <h1 id="main-title">360 安全规则集合 <img id="version-tag" alt="version-1.3.2" src="https://img.shields.io/badge/version-1.3.2-brightgreen"></h1>
-        <blockquote>Bjarne Stroustrup: “<i>C makes it easy to shoot yourself in the foot; C++ makes it harder, but when you do it blows your whole leg off.</i>” </blockquote>
+        <blockquote>Bjarne Stroustrup: “C makes it easy to shoot yourself in the foot; C++ makes it harder, but when you do it blows your whole leg off.” </blockquote>
       </div>
       <div>
         <img alt="logo" id="main-logo" src="./img/main_logo.png"/>     
