--- a/detail/introduction.html
+++ b/detail/introduction.html
@@ -28,7 +28,7 @@
   <header>
     <div id="header-wrapper">
       <div id="titles">
-        <h1 id="main-title" style="display: flex;flex-direction: row;align-items: center;"><img id="logo-360" alt="360 logo" src="../img/360.png" width="150px" />安全规则集合</h1>
+        <h1 id="introduction-title"><img id="logo-360" alt="360 logo" src="../img/360.png" /><span id="title-with-logo">安全规则集合</span><span id="title-without-logo">360 安全规则集合</span></h1>
         <div id="sub-title">详细的 C/C++ 安全编程指南</div>
       </div>
       <div>
