--- a/detail/introduction.html
+++ b/detail/introduction.html
@@ -45,7 +45,8 @@
       <p>《安规集》的最新动态请参见：<a href="https://github.com/Qihoo360/safe-rules">https://github.com/Qihoo360/safe-rules</a></p>
       <p>可在 <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache-2.0</a> 协议的许可范围内自由传播和使用《安规集》相关内容，同时也可以根据自身需求对某些规则进行适当的调整和取舍。</p>
     </div>
-    
+    <div class="content-wrapper content-last-section">
+    </div>
 </article>
 <footer>
   <a href="https://www.apache.org/licenses/LICENSE-2.0">Copyright©2024 360 Security Technology Inc., Licensed under the Apache-2.0 license.</a>
